WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270780
Using ruby tag within a hanging-punctuation specifies element, hanging appears not to apply.
https://bugs.webkit.org/show_bug.cgi?id=270780
Summary
Using ruby tag within a hanging-punctuation specifies element, hanging appear...
Kosuke Isobe
Reported
2024-03-10 22:11:49 PDT
Until Safari 17.3, the characters were hanging. This seems to be occurring from Safari 17.4. I want to have hanging characters even with Ruby tags. Reproduce example:
https://jsbin.com/poqahomura/edit?html,css,output
Attachments
Test reduction
(295 bytes, text/html)
2024-03-11 20:06 PDT
,
alan
no flags
Details
Patch
(8.40 KB, patch)
2024-03-12 20:44 PDT
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
Fixed screenshot
(274.36 KB, image/png)
2024-03-12 20:45 PDT
,
alan
no flags
Details
[fast-cq]Patch
(8.57 KB, patch)
2024-03-13 07:18 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-11 07:00:59 PDT
<
rdar://problem/124386802
>
alan
Comment 2
2024-03-11 20:06:19 PDT
Created
attachment 470310
[details]
Test reduction Thanks for the great test cases!
alan
Comment 3
2024-03-12 15:13:11 PDT
It looks like this is not even ruby specific but all bidi content fails. e.g. <div style="hanging-punctuation: first">“<span style="unicode-bidi: isolate">content</span></div>
alan
Comment 4
2024-03-12 20:44:44 PDT
Created
attachment 470330
[details]
Patch
alan
Comment 5
2024-03-12 20:45:16 PDT
Created
attachment 470331
[details]
Fixed screenshot
alan
Comment 6
2024-03-13 07:18:35 PDT
Created
attachment 470340
[details]
[fast-cq]Patch
EWS
Comment 7
2024-03-13 08:38:20 PDT
Committed
276026@main
(722de1a0a5f5): <
https://commits.webkit.org/276026@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470340
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug