Using ruby tag within a hanging-punctuation specifies element, hanging appears not to apply. https://bugs.webkit.org/show_bug.cgi?id=270780 <rdar://problem/124386802>

Reviewed by Antti Koivisto.

Let's take punctuation offset into account when processing (left-to-right) bidi based inline content.

1. Pass leading punctuation width over to display content build as part of the line layout result
2. Offset "visual left start position" with the punctuation width (negative offset)
- non-bidi content works fine as we already take this negative offset into account while building the line -which we lose when dealing with bidi reordering
- right-to-left is also fine as punctuation width being visually trailing does not contribute to visual left

* LayoutTests/fast/text/hanging-punctuation-with-bidi-expected.html: Added.
* LayoutTests/fast/text/hanging-punctuation-with-bidi.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::close):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::HangingContent::leadingPunctuationWidth const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::layoutInlineContent):
* Source/WebCore/layout/formattingContexts/inline/LineLayoutResult.h:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):

Canonical link: https://commits.webkit.org/276026@main